k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsecops-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devsecops
  template:
    metadata:
      labels:
        app: devsecops
    spec:
      containers:
      - name: app
        image: <ECR_IMAGE_URL>:latest
        ports:
        - containerPort: 5000
