k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-service
spec:
  type: ClusterIP
  selector:
    app: devsecops
  ports:
    - port: 80
      targetPort: 5000
